[package]
name = "rust"
version = "1.6.0"
authors = ["eooce"]
edition = "2021"

[dependencies]
shuttle-runtime = "0.49.0"
shuttle-secrets = "0.49.0"
once_cell = "1.19.0"
hyper = { version = "0.14.9", features = ["full"] }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "rust"
path = "src/main.rs"
