[package]
name = "rust"
version = "1.6.0"
authors = ["eooce"]
edition = "2021"

[dependencies]
shuttle-runtime = "0.49.1"
shuttle-axum = "0.49.1"
axum = "0.7.1"
hyper = { version = "0.14.9", features = ["full"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1.19.0"
tower = "0.4.13"
tower-http = { version = "0.4", features = ["fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.5"
curl = "0.4.44"
